# template-app-python

./: .env  Dockerfile  README.md  pyproject.toml
.github/workflows/: container-image.yaml  tests.yaml
app/: config.py  database.py  main.py
