[tool.poetry]
name = "Simple Python App"
version = "0.0.0"
description = ""
authors = ["Andrei Chenchik <andrei@chenchik.me>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.31"
psycopg2-binary = "^2.9.3"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
